test/mutation_analysis/s0006_zigzag_conversion/hafis/ablation_o3_full/mutants/36/result.txt
./test/mutation_analysis/s0006_zigzag_conversion/hafis/ablation_o3_full/mutants/36/Solution.java:33: error: unreachable statement
                while (false) {
                              ^
1 error
